deploy/worker-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"mayhem-worker:latest","namespace":"mayhem"},"fieldPath":"spec.template.spec.containers[?(@.name==\"mayhem-worker\")].image","pause":"false"}]
  name: mayhem-worker
  labels:
    app: mayhem-worker
    app.kubernetes.io/component: mayhem-worker
    app.kubernetes.io/instance: mayhem-worker
    app.kubernetes.io/name: mayhem-worker
    app.kubernetes.io/part-of: mayhem
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-17-ubi8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mayhem-worker
  template:
    metadata:
      labels:
        app: mayhem-worker
        deployment: mayhem-worker
    spec:
      volumes:
        - name: application-properties
          configMap:
            name: mayhem-worker-config
            items:
              - key: application.properties
                path: application.properties
            defaultMode: 511
      containers:
        - name: mayhem-worker
          image: >-
            image-registry.openshift-image-registry.svc:5000/mayhem/mayhem-worker@sha256:db04a1f3467c40057984eca052eeffb05739f4e6a67efa274a0308cde2bc6c5e
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources:
            limits:
              cpu: '4'
              memory: 500Mi
            requests:
              cpu: '2'
              memory: 50Mi
          volumeMounts:
            - name: application-properties
              readOnly: true
              mountPath: /deployments/config
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
